--- a/src/index.html
+++ b/src/index.html
@@ -190,93 +190,95 @@
           <h2 class="section-title__main">Campaign</h2>
           <p class="section-title__sub">キャンペーン</p>
         </div>
-        <div class="campaign-slider swiper">
-          <div class="campaign-slider-wrapper swiper-wrapper">
-            <div class="campaign-slider-slide swiper-slide">
-            <a href="#" class="campaign-card__item">
-              <div class="campaign-card__img">
-                <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
-              </div>
-              <div class="card__body">
-                <div class="card-text">
-                  <p class="card-text__title">ライセンス講習</p>
-                  <p class="card-text__title-sub">ライセンス取得</p>
-                </div>
-                <p class="text-line"></p>
-                <div class="card-price">
-                  <p class="card-price__text">全部コミコミ(お一人様)</p>
-                  <div class="card-price-box">
-                    <p class="card-price__old-strike-through">¥56,000</p>
-                    <p class="card-price__new">¥46,000</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-            </div>
-            <div class="campaign-slider-slide swiper-slide">
+        <div class="campaign-swiper__container">
+          <div class="campaign-slider swiper">
+            <div class="campaign-slider-wrapper swiper-wrapper">
+              <div class="campaign-slider-slide swiper-slide">
               <a href="#" class="campaign-card__item">
                 <div class="campaign-card__img">
-                    <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
+                  <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
                 </div>
                 <div class="card__body">
                   <div class="card-text">
-                    <p class="card-text__title">体験ダイビング</p>
-                    <p class="card-text__title-sub">貸切体験ダイビング</p>
+                    <p class="card-text__title">ライセンス講習</p>
+                    <p class="card-text__title-sub">ライセンス取得</p>
                   </div>
                   <p class="text-line"></p>
                   <div class="card-price">
                     <p class="card-price__text">全部コミコミ(お一人様)</p>
                     <div class="card-price-box">
-                      <p class="card-price__old-strike-through">¥24,000</p>
-                      <p class="card-price__new">¥18,000</p>
+                      <p class="card-price__old-strike-through">¥56,000</p>
+                      <p class="card-price__new">¥46,000</p>
                     </div>
                   </div>
                 </div>
               </a>
-            </div>
-            <div class="campaign-slider-slide swiper-slide">
-              <a href="#" class="campaign-card__item">
-                <div class="campaign-card__img">
-                  <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
-                </div>
-                <div class="card__body">
-                  <div class="card-text">
-                    <p class="card-text__title">体験ダイビング</p>
-                    <p class="card-text__title-sub">ナイトダイビング</p>
+              </div>
+              <div class="campaign-slider-slide swiper-slide">
+                <a href="#" class="campaign-card__item">
+                  <div class="campaign-card__img">
+                      <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
                   </div>
-                  <p class="text-line"></p>
-                  <div class="card-price">
-                    <p class="card-price__text">全部コミコミ(お一人様)</p>
-                    <div class="card-price-box">
-                      <p class="card-price__old-strike-through">¥10,000</p>
-                      <p class="card-price__new">¥8,000</p>
+                  <div class="card__body">
+                    <div class="card-text">
+                      <p class="card-text__title">体験ダイビング</p>
+                      <p class="card-text__title-sub">貸切体験ダイビング</p>
                     </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="campaign-slider-slide swiper-slide">
-              <a href="#" class="campaign-card__item">
-                <div class="card__img">
-                  <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
-                </div>
-                <div class="card__body">
-                  <div class="card-text">
-                            <p class="card-text__title">ファンダイビング</p>
-                            <p class="card-text__title-sub">貸切ファンダイビング</p>
-                  </div>
-                  <p class="text-line"></p>
-                  <div class="card-price">
-                    <p class="card-price__text">全部コミコミ(お一人様)</p>
-                    <div class="card-price-box">
+                    <p class="text-line"></p>
+                    <div class="card-price">
+                      <p class="card-price__text">全部コミコミ(お一人様)</p>
                       <div class="card-price-box">
-                        <p class="card-price__old-strike-through">¥20,000</p>
-                        <p class="card-price__new">¥16,000</p>
+                        <p class="card-price__old-strike-through">¥24,000</p>
+                        <p class="card-price__new">¥18,000</p>
                       </div>
                     </div>
                   </div>
-                </div>
-              </a>
+                </a>
+              </div>
+              <div class="campaign-slider-slide swiper-slide">
+                <a href="#" class="campaign-card__item">
+                  <div class="campaign-card__img">
+                    <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
+                  </div>
+                  <div class="card__body">
+                    <div class="card-text">
+                      <p class="card-text__title">体験ダイビング</p>
+                      <p class="card-text__title-sub">ナイトダイビング</p>
+                    </div>
+                    <p class="text-line"></p>
+                    <div class="card-price">
+                      <p class="card-price__text">全部コミコミ(お一人様)</p>
+                      <div class="card-price-box">
+                        <p class="card-price__old-strike-through">¥10,000</p>
+                        <p class="card-price__new">¥8,000</p>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="campaign-slider-slide swiper-slide">
+                <a href="#" class="campaign-card__item">
+                  <div class="card__img">
+                    <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
+                  </div>
+                  <div class="card__body">
+                    <div class="card-text">
+                              <p class="card-text__title">ファンダイビング</p>
+                              <p class="card-text__title-sub">貸切ファンダイビング</p>
+                    </div>
+                    <p class="text-line"></p>
+                    <div class="card-price">
+                      <p class="card-price__text">全部コミコミ(お一人様)</p>
+                      <div class="card-price-box">
+                        <div class="card-price-box">
+                          <p class="card-price__old-strike-through">¥20,000</p>
+                          <p class="card-price__new">¥16,000</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
           <div class="campaign-swiper__button-box">
@@ -284,10 +286,6 @@
             <div class="campaign-swiper__button-next"></div>
           </div>
         </div>
-        <!-- <div class="campaign-swiper__button-box">
-          <div class="campaign-swiper__button-prev"></div>
-          <div class="campaign-swiper__button-next"></div>
-        </div> -->
         <div class="campaign-button-layout">
           <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span>
           </a>
@@ -304,7 +302,6 @@
         <div class="about-us__img">
           <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img3">
           <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1">
-        <!-- <img src="./assets/images/about-us-logo.svg" alt="サンゴとイソギンチャクの絵" class="about-us__logo"> -->
         </div>
         <div class="about-us__container">
           <h3 class="about-us-title">Dive&nbsp;into<br>the&nbsp;Ocean</h3>
