--- a/src/index.html
+++ b/src/index.html
@@ -198,17 +198,17 @@
                 <div class="campaign-card__img">
                   <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
                 </div>
-                <div class="card__body">
-                  <div class="card-text">
-                    <p class="card-text__title">ライセンス講習</p>
-                    <p class="card-text__title-sub">ライセンス取得</p>
+                <div class="campaign-card__body">
+                  <div class="campaign-card-text">
+                    <p class="campaign-card-text__title">ライセンス講習</p>
+                    <p class="campaign-card-text__title-sub">ライセンス取得</p>
                   </div>
-                  <p class="text-line"></p>
-                  <div class="card-price">
-                    <p class="card-price__text">全部コミコミ(お一人様)</p>
-                    <div class="card-price-box">
-                      <p class="card-price__old-strike-through">¥56,000</p>
-                      <p class="card-price__new">¥46,000</p>
+                  <p class="campaign-text-line"></p>
+                  <div class="campaign-card-price">
+                    <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                    <div class="campaign-card-price-box">
+                      <p class="campaign-card-price__old-strike-through">¥56,000</p>
+                      <p class="campaign-card-price__new">¥46,000</p>
                     </div>
                   </div>
                 </div>
@@ -219,17 +219,17 @@
                   <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
                   </div>
-                  <div class="card__body">
-                    <div class="card-text">
-                      <p class="card-text__title">体験ダイビング</p>
-                      <p class="card-text__title-sub">貸切体験ダイビング</p>
+                  <div class="campaign-card__body">
+                    <div class="campaign-card-text">
+                      <p class="campaign-card-text__title">体験ダイビング</p>
+                      <p class="campaign-card-text__title-sub">貸切体験ダイビング</p>
                     </div>
-                    <p class="text-line"></p>
-                    <div class="card-price">
-                      <p class="card-price__text">全部コミコミ(お一人様)</p>
-                      <div class="card-price-box">
-                        <p class="card-price__old-strike-through">¥24,000</p>
-                        <p class="card-price__new">¥18,000</p>
+                    <p class="campaign-text-line"></p>
+                    <div class="campaign-card-price">
+                      <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                      <div class="campaign-card-price-box">
+                        <p class="campaign-card-price__old-strike-through">¥24,000</p>
+                        <p class="campaign-card-price__new">¥18,000</p>
                       </div>
                     </div>
                   </div>
@@ -240,17 +240,17 @@
                   <div class="campaign-card__img">
                     <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
                   </div>
-                  <div class="card__body">
-                    <div class="card-text">
-                      <p class="card-text__title">体験ダイビング</p>
-                      <p class="card-text__title-sub">ナイトダイビング</p>
+                  <div class="campaign-card__body">
+                    <div class="campaign-card-text">
+                      <p class="campaign-card-text__title">体験ダイビング</p>
+                      <p class="campaign-card-text__title-sub">ナイトダイビング</p>
                     </div>
-                    <p class="text-line"></p>
-                    <div class="card-price">
-                      <p class="card-price__text">全部コミコミ(お一人様)</p>
-                      <div class="card-price-box">
-                        <p class="card-price__old-strike-through">¥10,000</p>
-                        <p class="card-price__new">¥8,000</p>
+                    <p class="campaign-text-line"></p>
+                    <div class="campaign-card-price">
+                      <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                      <div class="campaign-card-price-box">
+                        <p class="campaign-card-price__old-strike-through">¥10,000</p>
+                        <p class="campaign-card-price__new">¥8,000</p>
                       </div>
                     </div>
                   </div>
@@ -258,21 +258,21 @@
               </div>
               <div class="campaign-slider-slide swiper-slide">
                 <a href="#" class="campaign-card__item">
-                  <div class="card__img">
+                  <div class="campaign-card__img">
                     <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
                   </div>
-                  <div class="card__body">
-                    <div class="card-text">
-                              <p class="card-text__title">ファンダイビング</p>
-                              <p class="card-text__title-sub">貸切ファンダイビング</p>
+                  <div class="campaign-card__body">
+                    <div class="campaign-card-text">
+                              <p class="campaign-card-text__title">ファンダイビング</p>
+                              <p class="campaign-card-text__title-sub">貸切ファンダイビング</p>
                     </div>
-                    <p class="text-line"></p>
-                    <div class="card-price">
-                      <p class="card-price__text">全部コミコミ(お一人様)</p>
-                      <div class="card-price-box">
-                        <div class="card-price-box">
-                          <p class="card-price__old-strike-through">¥20,000</p>
-                          <p class="card-price__new">¥16,000</p>
+                    <p class="campaign-text-line"></p>
+                    <div class="campaign-card-price">
+                      <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
+                      <div class="campaign-card-price-box">
+                        <div class="campaign-card-price-box">
+                          <p class="campaign-card-price__old-strike-through">¥20,000</p>
+                          <p class="campaign-card-price__new">¥16,000</p>
                         </div>
                       </div>
                     </div>
