--- a/src/index.html
+++ b/src/index.html
@@ -396,7 +396,7 @@
           </div>
           <div class="voice__cards voice-cards">
             <div class="voice-cards__item-box voice-card">
-              <a href="#" class="voice-card__item">
+              <div class="voice-card__item">
                 <div class="voice-card__container">
                   <div class="voice-card__title-box">
                     <div class="voice-card__title-box1">
@@ -416,10 +416,10 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
                   </p>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="voice-cards__item-box voice-card">
-              <a href="#" class="voice-card__item">
+              <div class="voice-card__item">
                 <div class="voice-card__container">
                   <div class="voice-card__title-box">
                     <div class="voice-card__title-box1">
@@ -439,7 +439,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
                   </p>
                 </div>
-              </a>
+              </div>
             </div>
           </div>
           <div class="voice__button-layout">
