--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -182,8 +182,12 @@
       <section id="about-us-page" class="about-us-page about-us-page-top">
         <div class="about-us-page__inner inner">
           <div class="about-us-page__img">
-            <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
-            <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1 md-none" />
+            <div class="about-us-page__img-small md-none">
+              <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1" />
+            </div>
+            <div class="about-us-page__img-big">
+              <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
+            </div>
           </div>
           <div class="about-us-page__container">
             <h3 class="about-us-page__head">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
