--- a/src/index.html
+++ b/src/index.html
@@ -302,8 +302,12 @@
             <h2 class="section-title__main">私たちについて</h2>
           </div>
           <div class="about-us__img">
-            <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img2" />
-            <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1" />
+            <div class="about-us__img-small md-none">
+              <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1" />
+            </div>
+            <div class="about-us__img-big">
+              <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
+            </div>
           </div>
           <div class="about-us__container">
             <h3 class="about-us__head">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
