--- a/src/voice-page.html
+++ b/src/voice-page.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hamburger-layout  md-show">
+        <div class="header__hamburger-layout md-show">
           <div class="header__hamburger js-hamburger">
             <span></span>
             <span></span>
@@ -112,7 +112,7 @@
               <div class="drawer-menu__container-right">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="voice-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">お客様の声</p>
                     </a>
                   </li>
@@ -159,11 +159,11 @@
       <section id="sub-page-mv" class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
-            <h1 class="sub-page-mv__title-main page-section-title">Campaign</h1>
+            <h1 class="sub-page-mv__title-main page-section-title">Voice</h1>
           </div>
           <picture class="sub-page-mv__picture">
-            <source srcset="./assets/images/campaign-page-pc-img.jpg" media="(min-width: 768px)" />
-            <img src="./assets/images/campaign-page-sp-img.jpg" alt="2匹の黄色い魚が泳いでいる様子" />
+            <source srcset="./assets/images/voice-page-pc-img.jpg" media="(min-width: 768px)" />
+            <img src="./assets/images/voice-page-sp-img.jpg" alt="4人のダイバーが潜る前にプロの指導を受けている様子" />
           </picture>
         </div>
       </section>
@@ -173,13 +173,13 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>キャンペーン</span>
+          <span>お客様の声</span>
         </div>
       </div>
       <!--タブ-->
-      <div class="campaign-page-tab campaign-page-tab-top">
-        <div class="campaign-page-tab__inner inner">
-          <ul class="campaign-page-tab__items campaign-tab">
+      <div class="voice-page-tab voice-page-tab-top">
+        <div class="voice-page-tab__inner inner">
+          <ul class="voice-page-tab__items campaign-tab">
             <li class="campaign-tab__item is-color"><a href="#">ALL</a></li>
             <li class="campaign-tab__item"><a href="#">ライセンス講習</a></li>
             <li class="campaign-tab__item"><a href="#">ファンダイビング</a></li>
@@ -188,7 +188,164 @@
         </div>
       </div>
       <!--コンテンツ-->
-
+      <section id="voice-page" class="voice-page voice-page-top">
+        <div class="voice-page__inner inner">
+          <div class="voice-page__cards voice-cards">
+            <div class="voice-cards__item-box voice-card">
+              <div class="voice-card__item">
+                <div class="voice-card__container">
+                  <div class="voice-card__title-box">
+                    <div class="voice-card__title-box1">
+                      <p class="voice-card__title-sub">20代(女性)</p>
+                      <p class="voice-card__title">ライセンス講習</p>
+                    </div>
+                    <div class="voice-card__title-box2">
+                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
+                    </div>
+                  </div>
+                  <div class="voice-card__img colorbox">
+                    <img src="./assets/images/voice-img1.jpg" alt="ベージュの帽子を被った笑顔の女性" />
+                  </div>
+                </div>
+                <div class="voice-card__text-box">
+                  <p class="voice-card__text-sub">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__item-box voice-card">
+              <div class="voice-card__item">
+                <div class="voice-card__container">
+                  <div class="voice-card__title-box">
+                    <div class="voice-card__title-box1">
+                      <p class="voice-card__title-sub">20代(男性)</p>
+                      <p class="voice-card__title">ファンダイビング</p>
+                    </div>
+                    <div class="voice-card__title-box2">
+                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
+                    </div>
+                  </div>
+                  <div class="voice-card__img colorbox">
+                    <img src="./assets/images/voice-img2.jpg" alt="グッドサインをした紺色のシャツを着た男性" />
+                  </div>
+                </div>
+                <div class="voice-card__text-box">
+                  <p class="voice-card__text-sub">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__item-box voice-card">
+              <div class="voice-card__item">
+                <div class="voice-card__container">
+                  <div class="voice-card__title-box">
+                    <div class="voice-card__title-box1">
+                      <p class="voice-card__title-sub">30代(女性)</p>
+                      <p class="voice-card__title">体験ダイビング</p>
+                    </div>
+                    <div class="voice-card__title-box2">
+                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
+                    </div>
+                  </div>
+                  <div class="voice-card__img colorbox">
+                    <img src="./assets/images/voice-img3.jpg" alt="眼鏡をかけた女性と金のネックレスをした女性" />
+                  </div>
+                </div>
+                <div class="voice-card__text-box">
+                  <p class="voice-card__text-sub">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__item-box voice-card">
+              <div class="voice-card__item">
+                <div class="voice-card__container">
+                  <div class="voice-card__title-box">
+                    <div class="voice-card__title-box1">
+                      <p class="voice-card__title-sub">20代(女性)</p>
+                      <p class="voice-card__title">体験ダイビング</p>
+                    </div>
+                    <div class="voice-card__title-box2">
+                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
+                    </div>
+                  </div>
+                  <div class="voice-card__img colorbox">
+                    <img src="./assets/images/voice-img4.jpg" alt="強風で髪の毛を押さえている女性" />
+                  </div>
+                </div>
+                <div class="voice-card__text-box">
+                  <p class="voice-card__text-sub">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__item-box voice-card">
+              <div class="voice-card__item">
+                <div class="voice-card__container">
+                  <div class="voice-card__title-box">
+                    <div class="voice-card__title-box1">
+                      <p class="voice-card__title-sub">30代(カップル)</p>
+                      <p class="voice-card__title">ファンダイビング</p>
+                    </div>
+                    <div class="voice-card__title-box2">
+                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
+                    </div>
+                  </div>
+                  <div class="voice-card__img colorbox">
+                    <img src="./assets/images/voice-img5.jpg" alt="腕を組んだ30代カップルがソファーに座っている様子" />
+                  </div>
+                </div>
+                <div class="voice-card__text-box">
+                  <p class="voice-card__text-sub">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="voice-cards__item-box voice-card">
+              <div class="voice-card__item">
+                <div class="voice-card__container">
+                  <div class="voice-card__title-box">
+                    <div class="voice-card__title-box1">
+                      <p class="voice-card__title-sub">20代(女性)</p>
+                      <p class="voice-card__title">ライセンス講習</p>
+                    </div>
+                    <div class="voice-card__title-box2">
+                      <p class="voice-card__title-text">ここにタイトルが入ります。ここにタイトル</p>
+                    </div>
+                  </div>
+                  <div class="voice-card__img colorbox">
+                    <img src="./assets/images/voice-img6.jpg" alt="笑顔で白と紺色のボーダーシャツを着た女性" />
+                  </div>
+                </div>
+                <div class="voice-card__text-box">
+                  <p class="voice-card__text-sub">
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="pagination-voice pagination-voice-top">
+            <div class="pagination-voice__inner inner">
+              <div class="pagination-voice__nav">
+                <a class="pagination-voice__prev" href="#"></a>
+                <span class="pagination-voice__current">1</span>
+                <a class="page larger" href="#">2</a>
+                <a class="page larger" href="#">3</a>
+                <a class="page larger" href="#">4</a>
+                <a class="page larger md-none" href="#">5</a>
+                <a class="page larger md-none" href="#">6</a>
+                <a class="pagination-voice__next" href="#"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--コンタクト-->
       <section id="contact" class="contact contact-campaign-top">
         <div class="contact__inner inner">
@@ -261,10 +418,10 @@
             </h3>
           </a>
           <div class="footer-title__logo-box">
-            <a href="#" target="_blank"  class="footer-title__facebook-logo">
+            <a href="#" target="_blank" class="footer-title__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a href="#" target="_blank"  class="footer-title__instagram-logo">
+            <a href="#" target="_blank" class="footer-title__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
@@ -305,7 +462,7 @@
           <div class="footer-menu__right">
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="voice-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">お客様の声</p>
                 </a>
               </li>
