--- a/src/blog-page-detail.html
+++ b/src/blog-page-detail.html
@@ -394,7 +394,7 @@
       </section>
 
       <!--コンタクト-->
-      <section id="contact" class="contact contact-about-top">
+      <section id="contact" class="contact contact-detail-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
